test('Test Jsoner',
  executable('jsoner_test',
    sources: ['jsoner_test.vala'] + cassette_client_sources,
    dependencies: cassette_dependencies
  )
)

test('Test Client Utils',
  executable('client_utils_test',
    sources: ['client_utils_test.vala'] + cassette_client_sources,
    dependencies: cassette_dependencies
  )
)

test('Test Info Database',
  executable('info_db_test',
    sources: ['info_db_test.vala'] + cassette_client_sources,
    dependencies: cassette_dependencies
  )
)

test('Test Storager',
  executable('storager_test',
    sources: ['storager_test.vala'] + cassette_client_sources,
    dependencies: cassette_dependencies
  )
)

