scalable_dir = join_paths('hicolor', 'scalable', 'apps')

install_data(
  join_paths(scalable_dir, ('@0@.svg').format(app_id_dyn)),
  install_dir: join_paths(get_option('datadir'), 'icons', scalable_dir)
)

symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')

# All icons starting with "cassette-" are mine
# All icons starting with "adwaita-" are taken from the libadwaita icon pack
# All icons starting with "il-" are taken from Icon Library application

install_data(
  join_paths(symbolic_dir, 'adwaita-audio-volume-high-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-audio-volume-low-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-audio-volume-medium-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-audio-volume-muted-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-audio-x-generic-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-bookmark-new-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-cache-perm-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-disliked-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-document-edit-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-edit-delete-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-edit-find-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-emblem-default-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-emblem-favorite-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-emblem-ok-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-face-sad-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-go-previous-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-list-add-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-list-remove-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-playback-pause-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-playback-start-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-playlist-repeat-song-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-playlist-shuffle-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-skip-backward-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-skip-forward-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-network-offline-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-open-menu-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-replaced-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-sidebar-show-right-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-user-home-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-user-trash-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-view-fullscreen-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-view-paged-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-view-refresh-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-view-sort-ascending-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-view-sort-descending-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-window-close-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-cache-temp-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-child-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-explicit-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-not-like-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'il-music-queue-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'il-sound-wave-alt-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'io.github.Rirusha.Cassette-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'adwaita-media-playlist-repeat-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-concentration.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-date.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-driving.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-for-lovers.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-party.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-road.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-run.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-sex.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-sleep.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-wake.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-work.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-classes-workout.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-collection.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-1950s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-1960s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-1970s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-1980s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-1990s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-2000s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-2010s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-2020s.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-childrens-new-year-songs.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-circle-of-king-and-fool.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-eternal-hits.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-for-exam.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-forgotten.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-forks.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-lullaby.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-new-years-tales.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-popular.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-tales.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-tales-for-sleeping.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-unfamiliar.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-era-white-noise.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-alternative.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-authors-song.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-bandstand.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-blues.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-chanson.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-childrens-music.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-childrens-music-of-world.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-classic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-country.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-dance-music.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-electronics.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-folk.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-indie.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-jazz.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-light-music.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-metal.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-music-of-world.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-pop.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-punk.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-rap-and-hip-hop.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-reggae.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-rnb.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-rock.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-ska.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-sounds-of-nature-and-noise-of-city.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-soundtracks.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-genre-soviet-music.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-aggression.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-autumn.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-beauty.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-calmness.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-cool.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-dream.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-energetic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-epic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-gloomy.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-joy.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-mystic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-new-year.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-relax.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-sadness.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-sentimental.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-spring.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-summer.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-mood-winter.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'cassette-wave-my-wave.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)

install_data(
  join_paths(symbolic_dir, 'il-sign-language-symbolic.svg'),
  install_dir: join_paths(get_option('datadir'), 'icons', symbolic_dir)
)